--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
     "format-currency": "^1.0.0",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "stripe": "^11.7.0",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "mongoose": "^6.7.5"
   }
 }
