--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "server": "nodemon index.js",
     "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \""
   },
@@ -14,7 +15,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
-    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -26,5 +26,8 @@
     "nodemon": "^2.0.20",
     "stripe": "^11.7.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
